--- a/02-in-document-styles.html
+++ b/02-in-document-styles.html
@@ -19,7 +19,9 @@
 
     <body>
         <div class="red-square">Square #1</div>
-        <div class="red-square" style="background-color: #F0F;">Square #2</div>
+        <div class="red-square">Square #2</div> 
     </body>
 
 </html>
+
+<!--Opnieuw gecommit bij de juiste issue-->
