--- a/02-in-document-styles.html
+++ b/02-in-document-styles.html
@@ -14,14 +14,22 @@
                     background-color: rgba(255,0,0,0.4) !important;
                     display: inline-block;
                 }
+                .yellow-square {
+                    width: 75px;
+                    height: 75px;
+                    color:#000000;
+                    padding: 20px;
+                    margin: 20px;
+                    font-size: 12px;
+                    background-color: #FF0;
+                    display: inline-block;
+                }
             </style>
     </head>
 
     <body>
         <div class="red-square">Square #1</div>
-        <div class="red-square" style="background-color: #F0F">Square #2</div> 
+        <div class="yellow-square">Square #2</div> 
     </body>
 
 </html>
-
-<!--Opnieuw gecommit bij de juiste issue-->
