--- a/10-styling-a-button.html
+++ b/10-styling-a-button.html
@@ -21,9 +21,12 @@
 
     <br><br><br><br><br><br><br><br><br><br><br>
     
+    <!-- Bij de gradient knop werkt de transition niet meer zo soepel-->
+    <!--Als ik bij de hover pseudo class ook een gradient toevoeg werkt het helemaal niet meer-->
+    
     <div class="gradient-button-container">
         <a href="https://edu-deta.com">Gradient</a>
-    </div>
+    </div> 
 
 </body>
 </html>
